# gtest1

./: .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  code_cov.sh  tuple.gcov
main/: CMakeLists.txt  formula.cpp  main.cpp
test/: CMakeLists.txt  formula-test.cpp
